--- a/src/modal.html
+++ b/src/modal.html
@@ -1,17 +1,11 @@
 <div>
-<!--    <pre>{{context}}</pre>-->
-<!--    <pre>{{state}}</pre>-->
     <sly-field title="Path to CSV catalog"
                description="Copy path to csv product catalog in Team Files">
         <el-input v-model="state.catalogPath"></el-input>
     </sly-field>
-    <sly-field title="Match image field"
-               description="Image field in metadata used to match image with product catalog">
-        <el-input v-model="state.fieldName"></el-input>
-    </sly-field>
-    <sly-field title="Match catalog column"
-               description="CSV Column used to match product catalog item with image">
-        <el-input v-model="state.columnName"></el-input>
+    <sly-field title="Path to user-batches mapping"
+               description="Copy path to json in Team Files">
+        <el-input v-model="state.user2batchesPath"></el-input>
     </sly-field>
     <sly-field title="Target class"
                description="Only objects of selected class can be marked as references">
@@ -20,18 +14,18 @@
                           :options="{showLabel: false}">
         </sly-select-class>
     </sly-field>
-    <sly-field title="Reference tag"
-               description="Choose tag that will be used to mark reference objects">
-        <sly-select-tag :project-id="context.projectId"
-                        :tags.sync="state.referenceTagName"
-                        :options="{showLabel: false}">
-        </sly-select-tag>
-    </sly-field>
     <sly-field title="Multiselect class"
                description="Objects of this class is used to perform multiselect operations">
         <sly-select-class :project-id="context.projectId"
                           :classes.sync="state.multiselectClassName"
                           :options="{showLabel: false}">
         </sly-select-class>
+    </sly-field>
+        <sly-field title="Target tag"
+               description="Choose tag that will be assigned to objects (should has string value)">
+        <sly-select-tag :project-id="context.projectId"
+                        :tags.sync="state.tagName"
+                        :options="{showLabel: false}">
+        </sly-select-tag>
     </sly-field>
 </div>
